change data json, one product hidden from recommendation feature products

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -113,6 +113,7 @@
     "dbtfy_cart_discount_savings_label": "Totale besparing",
     "dbtfy_inactive_tab_message_text_first": "👕 up to 50% off",
     "dbtfy_inactive_tab_message_text_second": "👕 Anodyne discounts",
+    "dbtfy_infinite_scroll_options": "scroll",
     "dbtfy_infinite_scroll_loading_text": "Meer laden",
     "dbtfy_inventory_quantity_threshold": 20,
     "dbtfy_menu_bar_link_list": "main-menu",
@@ -425,7 +426,7 @@
           "announcement-0": {
             "type": "message",
             "settings": {
-              "announcement_text": "<p><a href=\"https:\/\/www.anodyne.be\/pages\/anodyne-korting\" title=\"https:\/\/www.anodyne.be\/pages\/anodyne-korting\"><strong>Ontvang een code voor 20% korting - Klik hier<\/strong><\/a><\/p>",
+              "announcement_text": "<p><a href=\"https:\/\/www.anodyne.nl\/pages\/anodyne-korting\" title=\"https:\/\/www.anodyne.nl\/pages\/anodyne-korting\">Wilt u een kortingscode ontvangen? <strong>- Klik hier<\/strong><\/a><\/p>",
               "announcement_text_fr": "",
               "announcement_counter": "",
               "announcemen_link": "",
