--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -899,7 +899,7 @@
           "image_position": "center center",
           "video_title": "<span class=\"first\">Anodyne®<\/span>",
           "text_size": "medium",
-          "text_description": "<p><strong>VOORJAARSAANBIEDING! <\/strong>Tot wel <span style=\"text-decoration:underline\">-50%<\/span><\/p>",
+          "text_description": "<p><strong>Verbeter je houding en verminder rugpijn. Bestel het nu en test het 30 dagen volledig vrijblijvend.<\/strong><\/p>",
           "text_description_size": "medium",
           "button_label": "Vrouwen",
           "button_link": "shopify:\/\/collections\/vrouwen",
