--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -501,7 +501,7 @@
           "f4717d50-f461-4e1a-8c55-2b2f5ef2064d": {
             "type": "message",
             "settings": {
-              "announcement_text": "<p>100% tevreden of je volledige aankoopbedrag terug<\/p>",
+              "announcement_text": "<p>100% Tevredenheidsgarantie<\/p>",
               "icon_selector": "smily",
               "announcement_counter": "Nov 20, 2021 23:59:59",
               "announcemen_link": "",
