--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -270,7 +270,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "anodyne-bh",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -280,7 +280,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "womens-posture-shirt-zwart",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -290,7 +290,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "mens-posture-shirt-zwart",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -300,7 +300,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "womens-posture-shirt-wit",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -310,7 +310,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "mens-posture-shirt-wit",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -320,7 +320,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "womens-posture-shirt-zipper-zwart",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -330,7 +330,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "mens-posture-shirt-zipper-zwart",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -340,7 +340,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "womens-posture-shirt-zipper-wit",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -350,7 +350,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "mens-posture-shirt-zipper-wit",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -360,7 +360,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "womens-posture-shirt-nude",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -370,7 +370,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "womens-posture-shirt-zipper-nude",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "Ja, graag"
@@ -380,7 +380,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "mens-posture-shirt-blauw",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "ja, graag"
@@ -390,7 +390,7 @@
             "type": "cart-item-upsell",
             "settings": {
               "dbtfy_cart_upsell_replace_item": "add",
-              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 19,00. Normale prijs €39,00 (bespaar 50%)",
+              "dbtfy_cart_specific_upsell_title": "<strong>Deal van de week!<\/strong> Koop een houdingscorrector voor slechts € 29,00. Normale prijs €39,00",
               "dbtfy_cart_specific_upsell_product_trigger": "womens-posture-shirt-blauw",
               "dbtfy_cart_specific_upsell_product_offer": "houding-corrector-basic",
               "dbtfy_cart_specific_upsell_btn_title": "ja, graag"
@@ -471,40 +471,42 @@
           "announcement-0": {
             "type": "message",
             "settings": {
-              "announcement_text": "<p>Gratis verzending voor aankopen boven €59,00<\/p>",
-              "icon_selector": "truck",
+              "announcement_text": "<p><span style=\"text-decoration:underline\">Klik hier<\/span> om 30% korting te krijgen<\/p>",
+              "icon_selector": "none",
               "announcement_counter": "",
-              "announcemen_link": "",
+              "announcement_link": "shopify:\/\/pages\/anodyne-korting",
               "announcement_end_text": ""
             }
           },
           "b6685258-f59e-4ddc-b606-10aca800206c": {
             "type": "message",
             "settings": {
-              "announcement_text": "<p>Gratis retourneren en ruilen<\/p>",
-              "icon_selector": "return",
-              "announcement_counter": "Nov 20, 2021 23:59:59",
-              "announcemen_link": "",
+              "announcement_text": "<p>Slechts voor een beperkte tijd<\/p>",
+              "icon_selector": "none",
+              "announcement_counter": "",
+              "announcement_link": "shopify:\/\/pages\/anodyne-korting",
               "announcement_end_text": ""
             }
           },
           "ed74de61-4b72-4520-a3f0-4b28c6285363": {
             "type": "message",
+            "disabled": true,
             "settings": {
               "announcement_text": "<p>30 dagen volledig retourrecht<\/p>",
               "icon_selector": "checkmark",
               "announcement_counter": "Nov 20, 2021 23:59:59",
-              "announcemen_link": "",
+              "announcement_link": "",
               "announcement_end_text": ""
             }
           },
           "f4717d50-f461-4e1a-8c55-2b2f5ef2064d": {
             "type": "message",
+            "disabled": true,
             "settings": {
               "announcement_text": "<p>100% Tevredenheidsgarantie<\/p>",
               "icon_selector": "smily",
               "announcement_counter": "Nov 20, 2021 23:59:59",
-              "announcemen_link": "",
+              "announcement_link": "",
               "announcement_end_text": ""
             }
           }
@@ -1365,7 +1367,7 @@
               "dbtfy_faq_page_open": false,
               "dbtfy_faq_page_icon": "",
               "title": "Hoe lang gaat mijn Anodyne® product mee?",
-              "text": "<p>De levensduur van uw Anodyne product hangt af van hoe u het verzorgt en hoe vaak en hoe lang u het draagt. Zoals alle andere kleding zal ook deze kleding tekenen van slijtage gaan vertonen, afhankelijk van hoe vaak u de kleding draagt.<\/p><p>De levensduur hangt met name af van of u de kleding NIET IN DE DROGER droogt of op meer dan 30 graden in de wasmachine wast. Voor een zo lang mogelijke levensduur van de producten raden wij handwas aan. Wij raden verder aan om GEEN WASVERZACHTER te gebruiken, omdat dit ten koste gaat van de werking van de NeuroBands®.<\/p>"
+              "text": "<p>De levensduur van uw Anodyne product hangt af van hoe u het verzorgt en hoe vaak en hoe lang u het draagt. Zoals alle andere kleding zal ook deze kleding tekenen van slijtage gaan vertonen, afhankelijk van hoe vaak u de kleding draagt.<\/p><p>De levensduur hangt voornamelijk af van het feit of het kledingstuk NIET wordt GEDROOGD of met de hand wordt gewassen op meer dan 30 graden. Voor een zo lang mogelijke levensduur van de producten raden wij handwas aan. Wij raden verder aan om GEEN WASVERZACHTER te gebruiken, omdat dit ten koste gaat van de werking van de NeuroBands®.<\/p>"
             }
           },
           "64f3cdad-ec83-434e-951d-1db6546ee6f2": {
@@ -1433,7 +1435,7 @@
               "dbtfy_faq_page_open": false,
               "dbtfy_faq_page_icon": "",
               "title": "Hoe kan ik mijn Anodyne® producten het beste verzorgen?",
-              "text": "<p>De Anodyne® producten kunnen met een handwas worden gewassen, of in de wasmachine op 30 graden. NIET IN DE DROGER drogen! Het shirt droogt na een machine was makkelijk in een nacht wanneer het vrij kan hangen.Het is belangrijk dat bij het wassen van de producten GEEN WASVERZACHTER te gebruiken. Hierdoor zal de rek in de NeuroBands verminderen waardoor het effect van de producten zal verdwijnen.Bij eventuele nare geurtjes door zweet raden wij aan om een sportwasmiddel te gebruiken om de producten te wassen. Het is ook mogelijk om de producten in een azijnbad te laten weken voor het de was ingaat, zodat nare geurtjes tegen kunnen worden gegaan.<\/p>"
+              "text": "<p>De Anodyne® producten kunnen met een handwas worden gewassen. NIET IN DE DROGER drogen! Het shirt droogt na een machine was makkelijk in een nacht wanneer het vrij kan hangen.Het is belangrijk dat bij het wassen van de producten GEEN WASVERZACHTER te gebruiken. Hierdoor zal de rek in de NeuroBands verminderen waardoor het effect van de producten zal verdwijnen.Bij eventuele nare geurtjes door zweet raden wij aan om een sportwasmiddel te gebruiken om de producten te wassen. Het is ook mogelijk om de producten in een azijnbad te laten weken voor het de was ingaat, zodat nare geurtjes tegen kunnen worden gegaan.<\/p>"
             }
           },
           "c906914a-e11e-4155-85c4-420ce65fda17": {
